--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
     id ("io.freefair.lombok") version "8.0.1"
     id ("com.github.johnrengelman.shadow") version "7.1.0"
     id ("xyz.jpenilla.run-paper") version "2.0.1"
