--- a/build.gradle
+++ b/build.gradle
@@ -46,9 +46,9 @@ java {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'org.gradle.sample'
+            groupId = 'net.biryeongtrain'
             artifactId = 'library'
-            version = '1.1'
+            version = '1.0'
 
             from components.java
         }
